2022-04-12  Carlos Alberto Lopez Perez  <clopez@igalia.com>

        [GTK][WPE] generate-bundle: fix typo/bug in the wrapper shell code for the bundle after r292109.
        https://bugs.webkit.org/show_bug.cgi?id=237107

        There was a typo/bug in the shell code for the bundle that tried to check
        if a path was absolute. Fix the issue and also improve the code a bit.

        Unreviewed follow-up fix.

        * Scripts/webkitpy/binary_bundling/bundle.py:
        (BinaryBundler.generate_wrapper_script):

2022-04-11  Tyler Wilcock  <tyler_w@apple.com>

        AX: Update isolated tree in response to AXReadOnlyStatusChanged, AXRequiredStatusChanged, and AXPressedStateChanged notifications
        https://bugs.webkit.org/show_bug.cgi?id=239047

        Reviewed by Chris Fleizach.

        * DumpRenderTree/ios/AccessibilityUIElementIOS.mm:
        (AccessibilityUIElement::isAttributeSettable):
        (AccessibilityUIElement::isRequired const):
        Added both of these methods so that the tests added with this patch can run on iOS.
        * WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
        (WTR::AccessibilityUIElement::isAttributeSettable):
        (WTR::AccessibilityUIElement::isRequired const):
        Added both of these methods so that the tests added with this patch can run on iOS.

2022-04-11  Jonathan Bedard  <jbedard@apple.com>

        [Merge-Queue] Build before landing
        https://bugs.webkit.org/show_bug.cgi?id=239068
        <rdar://problem/91565146>

        Reviewed by Ryan Haddad.

        * CISupport/ews-build/factories.py:
        (MergeQueueFactory.__init__): Build WebKit before landing.
        * CISupport/ews-build/factories_unittest.py:
        (TestExpectedBuildSteps):

2022-04-11  Chris Dumez  <cdumez@apple.com>

        REGRESSION:(r292696) lldb_webkit_unittest.TestSummaryProviders.serial_test_WTFStringImpl_SummaryProvider_null_string is a constant failure